# rewritto-ide

./: .gitattributes  .gitignore  README.md  REQUIREMENTS.txt  build-all.sh  build-native.sh  build-windows.ps1  ideas.txt  requirements.txt  restore_main_window.cpp
.github/workflows/: release.yml
arduino-ide/: README.md
arduino-ide/qt-native-app/: CMakeLists.txt  FEATURE_PARITY_TODO.md  README.md  blingblink-ide
arduino-ide/qt-native-app/docs/: qt6-native-rewrite-roadmap.md  qt6-port-roadmap.md
arduino-ide/qt-native-app/packaging/appimage/: blingblink-ide.xml  build-appimage.sh  com.blingblink.ide.appdata.xml.disabled  com.blingblink.ide.desktop  com.rewritto.ide.appdata.xml  com.rewritto.ide.desktop
arduino-ide/qt-native-app/packaging/release/: package-native.sh
arduino-ide/qt-native-app/resources/: resources.qrc
arduino-ide/qt-native-app/src/: arduino_cli.cpp  arduino_cli.h  board_selector_dialog.cpp  board_selector_dialog.h  boards_manager_dialog.cpp  boards_manager_dialog.h  build_output_parser.cpp  code_editor.cpp  code_editor.h  code_snapshot_compare_dialog.cpp  code_snapshot_compare_dialog.h  code_snapshot_store.h  code_snapshots_dialog.cpp  code_snapshots_dialog.h  cpp_highlighter.cpp  editor_widget.cpp  editor_widget.h  examples_dialog.h  examples_scanner.cpp  find_in_files_dialog.cpp  find_replace_dialog.cpp  index_update_policy.h  interface_scale_manager.cpp  interface_scale_manager.h  keymap_manager.h  keymap_preferences_dialog.h  library_manager_dialog.h  lsp_code_action_utils.h  main.cpp  main_window.cpp  main_window.h  mi_parser.h  output_widget.cpp  preferences_dialog.cpp  problems_widget.cpp  quick_pick_dialog.h  replace_in_files_dialog.h  serial_monitor_widget.cpp  serial_plot_parser.cpp  serial_plot_range.cpp  (+9 more)
arduino-ide/qt-native-app/tests/: CMakeLists.txt  test_arduino_cli.cpp  test_arduino_cli_diagnostics.cpp  test_build_output_parser.cpp  test_editor_widget.cpp  test_library_manager_dialog.cpp  test_mi_parser.cpp  test_platform_filter_proxy_model.cpp  test_quick_pick_dialog.cpp  test_replace_in_files_worker.cpp  test_serial_monitor_widget.cpp  test_serial_plotter_widget.cpp  test_sketch_build_settings_store.cpp  test_sketch_manager.cpp  test_welcome_widget.cpp
arduino-ide_qt/arduino-ide/qt-native-app/src/: update_manager.cpp
rewritto-core/: README.md
rewritto-core/.github/workflows/: release.yml
rewritto-core/qt-native-app/: CMakeLists.txt  FEATURE_PARITY_TODO.md  README.md
rewritto-core/qt-native-app/docs/: README.md  advanced-usage.md  development.md  qt6-native-parity-checklist.md  qt6-native-rewrite-roadmap.md  qt6-port-roadmap.md
rewritto-core/qt-native-app/docs/contributor-guide/: beta-testing.md  translation.md
rewritto-core/qt-native-app/docs/internal/: Ubuntu.md  release-procedure.md
rewritto-core/qt-native-app/packaging/appimage/: build-appimage.sh  com.rewritto.ide.appdata.xml  com.rewritto.ide.desktop
rewritto-core/qt-native-app/packaging/release/: package-native.sh  package-windows.ps1
rewritto-core/qt-native-app/resources/: additional-boards.txt  resources.qrc
rewritto-core/qt-native-app/src/: arduino_cli.cpp  board_selector_dialog.cpp  board_selector_dialog.h  build_output_parser.h  build_settings_dialog.cpp  build_settings_dialog.h  code_editor.cpp  code_snapshot_store.cpp  code_snapshots_dialog.cpp  cpp_highlighter.h  editor_widget.h  examples_dialog.cpp  examples_scanner.cpp  examples_scanner.h  find_in_files_dialog.h  find_replace_dialog.h  index_update_policy.cpp  keymap_manager.cpp  keymap_preferences_dialog.cpp  library_manager_dialog.cpp  library_manager_dialog.h  lsp_client.cpp  lsp_client.h  lsp_code_action_utils.cpp  main.cpp  main_window.cpp  main_window.h  mi_parser.cpp  output_widget.h  platform_filter_proxy_model.cpp  platform_filter_proxy_model.h  preferences_dialog.cpp  preferences_dialog.h  problems_widget.h  quick_pick_dialog.cpp  replace_in_files_dialog.cpp  serial_monitor_widget.cpp  serial_monitor_widget.h  serial_plot_parser.h  serial_plotter_widget.cpp  (+8 more)
rewritto-core/qt-native-app/tests/: CMakeLists.txt  fake_lsp_server.cpp  test_arduino_cli.cpp  test_arduino_cli_diagnostics.cpp  test_build_output_parser.cpp  test_code_editor.cpp  test_code_snapshot_store.cpp  test_editor_widget.cpp  test_examples_scanner.cpp  test_find_in_files_worker.cpp  test_index_update_policy.cpp  test_keymap_manager.cpp  test_library_manager_dialog.cpp  test_lsp_client.cpp  test_lsp_code_action_utils.cpp  test_output_widget.cpp  test_platform_filter_proxy_model.cpp  test_preferences_dialog.cpp  test_quick_pick_dialog.cpp  test_serial_monitor_widget.cpp  test_serial_plot_parser.cpp  test_serial_plot_range.cpp  test_serial_plotter_widget.cpp  test_serial_port.cpp  test_sketch_build_settings_store.cpp  test_welcome_widget.cpp
